# gestion_flux_financiers

./: .gitignore  README.md  pyproject.toml
gestion_flux_financiers/: custom_fields.py  hooks.py  install.py  utils.py
gestion_flux_financiers/doctype/configuration_integration/: configuration_integration.json
gestion_flux_financiers/doctype/demande_financiere/: demande_financiere.js  demande_financiere.json  demande_financiere.py  test_demande_financiere.py
gestion_flux_financiers/doctype/ligne_demande/: ligne_demande.json
gestion_flux_financiers/doctype/mapping_ligne_commande_openerp/: mapping_ligne_commande_openerp.json
gestion_flux_financiers/doctype/mapping_projet_leantime/: mapping_projet_leantime.json
gestion_flux_financiers/doctype/mapping_projet_openerp/: mapping_projet_openerp.json
gestion_flux_financiers/doctype/mapping_tache_leantime/: mapping_tache_leantime.json
gestion_flux_financiers/doctype/sous_type_flux/: sous_type_flux.json
gestion_flux_financiers/doctype/type_flux/: type_flux.json
gestion_flux_financiers/integrations/: leantime.py  openerp_n8n.py
gestion_flux_financiers/public/css/: dummy.css
gestion_flux_financiers/report/alertes_depassement_openerp/: alertes_depassement_openerp.json  alertes_depassement_openerp.py
public/js/: dummy.js
